--- a/app/templates/profilemy.html
+++ b/app/templates/profilemy.html
@@ -22,6 +22,7 @@
             Google User Name: {{current_user.gname}} <br>
         {% endif %}
         Email: {{current_user.email}} <br>
+        Style: {{current_user.style}} <br>
 
 
     </div>
