--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@ like the navbar. -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Put the title of your app here-->
-    <title>Title</title>
+    <title>{% block title %}Oakland Thrift Finder{% endblock %}</title>
     <!--This is where the link to the favicon and local CSS file goes.  The files that are referenced are in the static folder.-->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='local.css') }}"  type="text/css" />
@@ -23,6 +23,12 @@ like the navbar. -->
       {{ moment.include_moment() }}
 </head>
 <body>
+    <header>
+        <h1>Welcome to Oakland Thrift Finder</h1>
+    </header>
+    <nav>
+        <!-- Add navigation links here -->
+    </nav>
   <!--This is where the navbar is placed.  The navbar code is in the includes folder -->
     {% include 'includes/_navbar.html' %}
       <!-- Flask has a messages feature called "Flash" where you can pass messages to the template from the code.  This is where 
@@ -42,12 +48,64 @@ like the navbar. -->
       {% endwith %}
 
   <!--This is where each of the templates are embedded in to this template -->
-  <div class="container pt-3">
+  <main>
       {% block body %}
+      <div class="container">
+        <div class="row align-items-center">
+          <!-- Empty column for spacing -->
+          <div class="col"></div>
+
+          <!-- Title in the middle column -->
+          <div class="col text-center">
+            <h1>Welcome to Oakland Thrift Finder</h1>
+          </div>
+
+          <!-- Directory on the right column -->
+          <div class="col">
+            <h2>Thrift Store Directory</h2>
+            <div id="search-filter">
+                <input type="text" id="search-bar" placeholder="Search thrift stores..." oninput="filterStores()">
+                <select id="location-filter" onchange="filterStores()">
+                    <option value="">All Locations</option>
+                    <option value="Downtown Oakland">Downtown Oakland</option>
+                    <option value="Telegraph Ave">Telegraph Ave</option>
+                    <option value="Fruitvale">Fruitvale</option>
+                    <option value="Grand Ave">Grand Ave</option>
+                </select>
+            </div>
+            <ul id="thrift-store-list">
+                {% for store in thrift_stores %}
+                    <li class="store-item" data-name="{{ store.name }}" data-location="{{ store.location }}">
+                        {{ store.name }} - {{ store.location }}
+                    </li>
+                {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </div>
       {% endblock %}
-  </div>
+  </main>
+  <footer>
+  </footer>
   {% include 'includes/_footer.html' %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script>
+    function filterStores() {
+        const search = document.getElementById('search-bar').value.toLowerCase();
+        const location = document.getElementById('location-filter').value;
+        const stores = document.querySelectorAll('.store-item');
+
+        stores.forEach(store => {
+            const name = store.getAttribute('data-name').toLowerCase();
+            const loc = store.getAttribute('data-location');
+            if ((name.includes(search) || !search) && (loc === location || !location)) {
+                store.style.display = '';
+            } else {
+                store.style.display = 'none';
+            }
+        });
+    }
+  </script>
 </body>
 </html>
