--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -17,8 +17,8 @@
             Clinics
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/clinic/map">Map</a></li>
-            <li><a class="dropdown-item" href="/clinic/list">List</a></li>
+            <li><a class="dropdown-item" href="/thrift/map">Map</a></li>
+            <li><a class="dropdown-item" href="/thrift/list">List</a></li>
           </ul>
         </li>
         <li>
