--- a/app/templates/clinics.html
+++ b/app/templates/clinics.html
@@ -4,10 +4,10 @@
 
 <div class="row">
     <div class="col-4">
-        <h1 class="display-1">All Clinics</h1>
+        <h1 class="display-1">All Thrifts</h1>
     </div>
     <div class="col">
-        <a href="/thrift/new" class="btn btn-primary btn-sm mt-5" role="button">New Clinic</a>
+        <a href="/thrift/new" class="btn btn-primary btn-sm mt-5" role="button">New Thrift</a>
     </div>
 </div>
 
