--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Clinics
+            Thrifts
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/thrift/map">Map</a></li>
