--- a/app/templates/clinicform.html
+++ b/app/templates/clinicform.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-    <h1>Input New Clinic</h1>
-        <h4>If your clinic is not already in our database, add your clinic's info here for it to show up!</h4>
+    <h1>Input New Thrift</h1>
+        <h4>If your thrift store is not already in our database, add your thrift's info here for it to show up!</h4>
         <!--List all errors in a group at the top-->
         {% for field in form.errors %}
             {% for error in form.errors[field] %}
