--- a/app/templates/clinicform.html
+++ b/app/templates/clinicform.html
@@ -19,6 +19,18 @@
             {{ form.name(size=64) }}<br>
         </p>
         <p>
+            {{ form.phone.label }}<br>
+            {{ form.phone(size=64) }}<br>
+        </p>
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(size=64) }}<br>
+        </p>
+        <p>
+            {{ form.website.label }}<br>
+            {{ form.website(size=64) }}<br>
+        </p>
+        <p>
             Street: {{ form.streetAddress(size=64) }}<br>
             City: {{ form.city}} State: {{form.state}} Zipcode: {{form.zipcode}}
         </p> 
