--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,18 +6,33 @@
 <h1>Oakland Thrift Finder</h1>
 
 <p>Welcome to the Oakland Thrift Finder! This is a simple web application that helps you find thrift stores in Oakland, California. You can search for thrift stores by name or location.</p>
-<p>To get started, use the search bar above to enter a thrift store name or location. You can also browse the list of thrift stores below.</p>
+<p>To get started, use the search bar above to enter a thrift store name or location. You can also browse the list of thrift stores and thrift events below.</p>
 
-<h2>Thrift Store Directory</h2>
-<ul id="thrift-store-list">
-  <li data-name="Goodwill" data-location="Downtown Oakland">Goodwill - Downtown Oakland</li>
-  <li data-name="Out of the Closet" data-location="Telegraph Ave">Out of the Closet - Telegraph Ave</li>
-  <li data-name="Thrift Town" data-location="Fruitvale">Thrift Town - Fruitvale</li>
-  <li data-name="Community Thrift" data-location="Grand Ave">Community Thrift - Grand Ave</li>
-  <li data-name="American Cancer Society Discovery Shop" data-location="127 41st St">American Cancer Society Discovery Shop - 127 41st St</li>
-  <li data-name="Goodwill Store & Donation Center" data-location="6624 San Pablo Ave, Emeryville">Goodwill Store & Donation Center - 6624 San Pablo Ave, Emeryville</li>
-  <li data-name="Salvation Army" data-location="Oakland">Salvation Army - Oakland - 601 Webster St</li>
-</ul>
+<div class="container">
+  <div class="row">
+    <!-- Thrift Store Directory -->
+    <div class="col-md-6">
+      <h2>Thrift Store Directory</h2>
+      <ul id="thrift-store-list">
+        <li data-name="Out of the Closet" data-location="Lake Merrit"><h6>Out of the Closet</h6> - 238 E 18th St, Oakland</li>
+        <li data-name="American Cancer Society Discovery Shop" data-location="127 41st St, Oakland"><h6>American Cancer Society</h6> - Discovery Shop - 127 41st St, Oakland</li>
+        <li data-name="Goodwill Store & Donation Center" data-location="6624 San Pablo Ave, Emeryville"><h6>Goodwill Store & Donation Center</h6> - 6624 San Pablo Ave, Emeryville</li>
+        <li data-name="Salvation Army" data-location="Oakland"><h6>Salvation Army</h6> - 601 Webster St, Oakland</li>
+        <li data-name="Salvation Army" data-location="Alameda"><h6>Salvation Army</h6> - 1918 Park St, Alameda</li>
+        <li data-name="Urban University Boutique." data-location="Grand Ave"><h6>Urban University Boutique</h6> - 3237 Grand Ave, Oakland</li>
+        <li data-name="Crossroads" data-location="Rockridge"><h6>Crossroads Trading</h6> - 5901 College St, Oakland</li>
+      </ul>
+    </div>
 
-<br><br><br>
-{% endblock %}
+    <!-- Thrift Events/Popups -->
+    <div class="col-md-6">
+      <h2>Thrift Events & Popups</h2>
+      <ul id="thrift-events-list">
+        <li data-name="Vintage Market" data-location="Lake Merritt">Vintage Market - Lake Merritt, 1st Sat Monthly</li>
+        <li data-name="Pop-Up Thrift" data-location="Berkeley">So So Market - Telegraph Ave - Next to UCB, First Saturday</li>
+        <li data-name="Alameda Antique Fair" data-location="Alameda ">Alameda Antique Fair - 3900 Main St, Alameda, 1st Sunday Monthly</li>
+      </ul>
+    </div>
+  </div>
+</div>
+{% endblock %}>
