--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,9 +28,9 @@
     <div class="col-md-6">
       <h2>Thrift Events & Popups</h2>
       <ul id="thrift-events-list">
-        <li data-name="Vintage Market" data-location="Lake Merritt">Vintage Market - Lake Merritt, 1st Sat Monthly</li>
-        <li data-name="Pop-Up Thrift" data-location="Berkeley">So So Market - Telegraph Ave - Next to UCB, First Saturday</li>
-        <li data-name="Alameda Antique Fair" data-location="Alameda ">Alameda Antique Fair - 3900 Main St, Alameda, 1st Sunday Monthly</li>
+        <li data-name="Vintage Market" data-location="Lake Merritt"><h6>Vintage Market</h6> - Lake Merritt, 1st Sat Monthly</li>
+        <li data-name="Pop-Up Thrift" data-location="Berkeley"><h6>So So Market</h6> - Telegraph Ave - Next to UCB, First Saturday</li>
+        <li data-name="Alameda Antique Fair" data-location="Alameda "><h6>Alameda Antique Fair</h6> - 3900 Main St, Alameda, 1st Sunday Monthly</li>
       </ul>
     </div>
   </div>
