--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -2,17 +2,17 @@
     <div class="container pt-2 mt-2 border-top">
       <div class="row pb-4">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="static/lion.png" alt="" width="50" class="mb-3">
-          <p class="font-italic text-muted">Some stuff</p>
+          <p class="font-italic text-muted">Enjoy!!</p>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 mx-auto">
-          <h6 class="text-uppercase font-weight-bold mb-4">This is the footer.</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4">Directory</h6>
           <ul class="list-unstyled mb-0">
             <li class="mb-2"><a href="/" class="text-muted">Home</a></li>
-            <li class="mb-2"><a href="/" class="text-muted">About Us</a></li>
+            <li class="mb-2"><a href="/aboutus" class="text-muted">About Us</a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-6 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4">Some Stuff</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4">Senior Project 2025</h6>
         </div>
       </div>
     </div>
